force-app/main/default/objects/Send_Email_Setting__mdt/Send_Email_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Custom setting to store the details of To Address, CC Address, Template Name for custom email utility.</description>
    <label>Send Email Setting</label>
    <pluralLabel>Send Email Settings</pluralLabel>
</CustomObject>