force-app/main/default/objects/Send_Email_Setting__mdt/fields/Additional_CC_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Additional_CC_Addresses__c</fullName>
    <description>To enter the hard coded email ids that are to be CC&apos;d for out going emails separated by &apos;;&apos;.</description>
    <label>Additional CC Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>