force-app/main/default/objects/Send_Email_Setting__mdt/fields/Additional_To_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Additional_To_Addresses__c</fullName>
    <description>To fill the hard coded emails that are needed in the &quot;To&quot; List of the outgoing Emails separated by &apos;;&apos;.</description>
    <label>Additional To Addresses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>