force-app/main/default/objects/Send_Email_Setting__mdt/fields/CC_Address_Fields__c.field-meta.xml
<CustomField>
    <fullName>CC_Address_Fields__c</fullName>
    <description>Comma separated user fields corresponding to the object, who should be cc&apos;ed in the mail</description>
    <label>CC Address Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>