force-app/main/default/objects/Send_Email_Setting__mdt/fields/CC_Address_Roles__c.field-meta.xml
<CustomField>
    <fullName>CC_Address_Roles__c</fullName>
    <description>Comma separated roles to whom the mailed should be cc&apos;ed.</description>
    <label>CC Address Roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>