force-app/main/default/objects/Send_Email_Setting__mdt/fields/Target_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_Field__c</fullName>
    <description>Field to capture the target object field for the email message</description>
    <label>Target Object Field</label>
    <type>TextArea</type>
</CustomField>