force-app/main/default/objects/Send_Email_Setting__mdt/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <description>Name of the email template, to be used to send emails.</description>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>