force-app/main/default/objects/Send_Email_Setting__mdt/fields/To_Address_Fields__c.field-meta.xml
<CustomField>
    <fullName>To_Address_Fields__c</fullName>
    <description>Comma separated user fields related to the object, to whom the email is to be sent</description>
    <label>To Address Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>