force-app/main/default/objects/Send_Email_Setting__mdt/fields/To_Address_Roles__c.field-meta.xml
<CustomField>
    <fullName>To_Address_Roles__c</fullName>
    <description>Comma separated roles to whom the mail should be sent</description>
    <label>To Address Roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>